--- a/config.prod.yaml
+++ b/config.prod.yaml
@@ -1,7 +1,7 @@
 environment:
-  name: Test
-  project: cdf-bootcamp-72-test # ex. cdf-bootcamp-01-test
-  type: test # prod, staging, dev, test, qa
+  name: Production
+  project: cdf-bootcamp-72-prod # ex. cdf-bootcamp-01-test
+  type: prod # prod, staging, dev, test, qa
   selected:
     - modules/bootcamp/data_foundation
     - modules/bootcamp/ice_cream_api
@@ -20,10 +20,10 @@ variables:
 
       # Groups
       # OBJECT ID FOR test/prod Groups
-      data_developer_source_id: 2c746bbe-9e0e-4153-8665-f51abb2089c5 # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
-      data_pipeline_oee_source_id: 55a04990-7a73-4e8f-9191-ae6849efebe5 # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
-      readwrite_source_id: 7b93647b-7bec-4564-95ad-b2a246bedb11  # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
-      icapi_extractors_source_id: 48121077-204e-418e-abc5-7020cca8a5fe # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
+      data_developer_source_id: 40e7032a-2cf6-4209-81d7-f09e94e2d4bf # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
+      data_pipeline_oee_source_id: 47293f03-b1a5-452f-8c9e-a2d8d8b2d7d1 # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
+      readwrite_source_id: 302f5845-837e-4bed-bd58-1041294571ef # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
+      icapi_extractors_source_id: 1ec16398-a432-40f9-8055-0f5ab17575d7 # ex. xxxxxxxx-xxxx-xxxx-xxxxxxxxxxxx
 
       # Client Ids (App registrations or Service Principals)
       data_pipeline_oee_client_id: ${DATA_PIPELINE_OEE_CLIENT_ID} # replaced by .env
@@ -33,7 +33,7 @@ variables:
       # Variables shared by modules
       icapi_ds_external_id: ds_icapi
       icapi_space_name: icapi_dm_space
-      oee_space_name: oee_ts_space 
+      oee_space_name: oee_ts_space
       use_cases:
         oee:
           uc_oee_ds_external_id: ds_uc_oee
